# DJMAXPlus

./: .gitignore  Cargo.toml  DJMAXPlus.sln  DJMaxPlus.sln  LICENSE.md  README.ko.md  README.md  index.html  lanecover.html  main.ts  package-lock.json  package.json
DJMAXPlus/: DJMAXPlus.csproj  DJMAXPlus.sln  Program.cs
DJMAXPlus.ASDF/: Form1.Designer.cs  Form1.cs  Program.cs
DJMAXPlus.Browser/: BrowserController.cs  ControllerStates.cs  DJMAXPlus.Browser.csproj
DJMAXPlus.Common/: ControllerStates.cs
DJMAXPlus.DirectX11/: DX11Overlay.cs
DJMAXPlus.Hook/: DJMAXPlus.Hook.csproj  HotKey.cs  HotkeyManager.cs  InvokeHandler.cs  InvokeHelper.cs  NativeMethods.txt  OverlayHook.cs  OverlayProjector.cs
DJMAXPlus.Hooks/: DJMAXPlus.Hooks.csproj  DLLMain.cs  DX11Hook.cs
DJMAXPlus.Main/: DJMAXPlus.Main.csproj  MainForm.Designer.cs  MainForm.cs  Program.cs
DJMAXPlus.MainForm/: ApplicationHelper.cs  DJMAXPlus.MainForm.csproj  HotKey.cs  HotKeyController.Designer.cs  HotKeyController.cs  MainForm.Designer.cs  MainForm.cs  NativeMethods.txt
DJMAXPlus.Overlay/: DJMAXPlus.Overlay.csproj  OverlayController.cs
DJMAXPlus.OverlayRenderer/: BrowserController.cs  DJMAXPlus.OverlayRenderer.csproj  LaneCover.html  OverlayRenderer.cs  RendererStates.cs  TestPage.html
DJMAXPlus.Tests/: BrowserControllerTest.cs  BrowserControllerTests.cs  DJMAXPlus.Tests.csproj  InvokeHelperTests.cs  OverlayProjectorTests.cs  RendererTest.cs  UnitTest1.cs
DJMaxPlus/: AsyncContext.cs  DJMaxPlus.Main.csproj  Program.cs  app.manifest
src/: common.rs  configs.rs  helper.rs  lib.rs  main.rs  (+1 more)
(+14 files in other folders)
