[package]
name = "djmaxplus"
version = "0.2.0"
edition = "2021"

[lib]
name = "dp_payload"
crate-type = ["cdylib"]

[[bin]]
name = "djmaxplus"
path = "src/main.rs"

[dependencies]
hudhook = "0.6.1"
serde_yaml = "0.9.33"

[dependencies.imgui]
version = "0.11.0"
features = ["docking"]

[dependencies.serde]
version = "1.0.197"
features = ["serde_derive"]
